--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 </head>
 <body>
-    
+    <div id="quiz"></div>
+    <button id="submit">RESULTS</button>
+    <div id="results"></div>
 </body>
 </html>
