--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <script defer src="index.js"></script>
     <title>Browser Game</title>
 
 </head>
 <body>
-    <div id="quiz"></div>
-    <button id="submit">RESULTS</button>
-    <div id="results"></div>
+    <div id="question">Question</div>
+    <div id="choices" class="btn-grid">
+        <button class="btn">Option 1</button>
+        <button class="btn">Option 2</button>
+        <button class="btn">Option 3</button>
+        <button class="btn">Option 4</button>
+    </div>
+    <div class="buttons">
+        <button id="start-btn" class="start-btn btn">COMMENCE</button>
+        <button id="next-btn" class="next-btn btn">NEXT</button>
+    </div>
 </body>
 </html>
