--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 </head>
 <body>
+    <div class="cover">
+    <div id="question-cover" class="hide">
     <div id="question">Question</div>
     <div id="choices" class="btn-grid">
         <button class="btn">Option 1</button>
@@ -17,9 +19,11 @@
         <button class="btn">Option 3</button>
         <button class="btn">Option 4</button>
     </div>
+    </div>
     <div class="buttons">
         <button id="start-btn" class="start-btn btn">COMMENCE</button>
-        <button id="next-btn" class="next-btn btn">NEXT</button>
+        <button id="next-btn" class="next-btn btn hide">NEXT</button>
+    </div>
     </div>
 </body>
 </html>
