--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@
     <style type="text/css">* {cursor: url(https://cur.cursors-4u.net/others/oth-8/oth704.cur), auto !important;}</style>
     <img src="https://cur.cursors-4u.net/cursor.png"  alt="Bloody Knife" 
     style="position:absolute; top: 0px; right: 0px;" /></a>
+
+    <div>
+        <h2>SCORE</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>YAY</th>
+                    <th>NAY</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td id="yay">0</td>
+                    <td id="nay">0</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
 
