--- a/index.html
+++ b/index.html
@@ -29,22 +29,9 @@
     <img src="https://cur.cursors-4u.net/cursor.png"  alt="Bloody Knife" 
     style="position:absolute; top: 0px; right: 0px;" /></a>
 
-    <div>
-        <h2>SCORE</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>YAY</th>
-                    <th>NAY</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td id="yay">0</td>
-                    <td id="nay">0</td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="scoreboard">
+        <p class="score">Score</p>
+        <h1 class="points" id="score">0</h1>
     </div>
 </body>
 </html>
